--- a/django/06-ninja-gold/heroku/ninja_gold_app/templates/index.html
+++ b/django/06-ninja-gold/heroku/ninja_gold_app/templates/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ninja gold</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <link rel="icon" type="image/x-icon" href="{% static 'img/favicon.ico' %}" />
+    <link rel="stylesheet" href="{% static 'static/css/style.css' %}">
+    
+    <link rel="icon" type="image/x-icon" href="{% static './ninja_gold_app/static/img/favicon.ico' %}" />
 </head>
 
 <body>
