--- a/django/15-semi-restful-TV-shows/tvShowsApp/templates/all_shows.html
+++ b/django/15-semi-restful-TV-shows/tvShowsApp/templates/all_shows.html
@@ -44,7 +44,7 @@
                 </tbody>
             </table>
 
-            <a href="/shows/new"><button class="btn" id="centerBtn"  type="Submit">Add new</button></p>
+            <a href="/shows/new"><button class="btn" id="addNew"  type="Submit">Add new</button></p>
         </div>
     </div>
 
