--- a/django/15-semi-restful-TV-shows/tvShowsApp/templates/show_info.html
+++ b/django/15-semi-restful-TV-shows/tvShowsApp/templates/show_info.html
@@ -21,7 +21,7 @@
             <p>{{ selected_show.desc }}</p>
             <p>last edited:</span> {{ selected_show.updated_at }}</p>
             <div class="inline">
-                <a href="/shows"><button class="btn" type="Submit">BACK</button></a>
+                <a href="/shows"><button class="btn" type="Submit">ALL SHOWS</button></a>
                 <a href="/shows/{{selected_show.id}}/edit"><button class="btn" type="Submit">EDIT</button></a> 
                 <a href="/shows/{{selected_show.id}}/delete"><button class="btn" type="Submit">DELETE</button></a>
             </div>
