--- a/django/20-wall/theWallApp/templates/index.html
+++ b/django/20-wall/theWallApp/templates/index.html
@@ -18,11 +18,14 @@
             <ul>
                 {% for message in messages %}
                 {% if 'register' in message.extra_tags %}
-                <li {% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
+                <li>{{ message }}</li>
+                {% elif 'login' in message.extra_tags %}
+                <li>{{ message }}</li>
                 {% endif %}
                 {% endfor %}
             </ul>
             {% endif %}
+
         </div>
         <div class="col">
             <h1 class="header">REGISTER</h1>
@@ -38,24 +41,14 @@
         </div>
         <div class="col">
             <h1 class="header">LOGIN</h1>
-            {% if messages %}
-            <ul class="messages">
-                {% for message in messages %}
-                {% if 'login' in message.extra_tags %}
-                <li {% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
-                {% endif %}
-                {% endfor %}
-            </ul>
-            {% endif %}
             <form action="/login" method="POST">
                 {% csrf_token %}
-                <p>Email: <input type="text" name="email"></p>
-                <p>Password: <input type="text" name="pw"></p>
+                <p>Email: <input type="email" name="email"></p>
+                <p>Password: <input type="password" name="pw"></p>
                 <button class="btn" type="submit">Login</button>
             </form>
         </div>
     </div>
-
 </body>
 
 </html>
